# FastAPI_microshop

./: .gitignore  Makefile  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_06_15_1550-673c97f6bae3_create_product_table.py  2024_06_15_1641-5f53bc86bcf9_create_user_table.py  2024_06_15_2134-e93bad52273c_create_profile_table.py  2024_06_16_1123-1eb11c4b0131_.py  2024_06_19_1828-1134b4ffdf58_create_table_order.py  2024_06_19_2006-fbe293dae951_create_order_product_association.py  2024_06_21_1627-f80e06df92d1_create_count_in_orderproductassociation_.py  2024_06_28_1336-4cbfdbff638f_add_unit_price_in_.py
api/v1/: routers_v1.py
api/v1/demo_auth/: demo_jwt_auth.py  views_auth.py
api/v1/products/: crud_products.py  dependencies.py  schemas_products.py  views_products.py
api/v1/users/: crud_users.py  schemas_users.py  views_users.py
auth/: utils.py
core/: config.py  db_helper.py
core/models/: __init__.py  base.py  db_helper.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
core/models/mixins/: user_relation_mixin.py
